// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders sort component with id 1`] = `
<div
  className="sort--holder"
>
  <span
    className="sort--title"
  >
    Id
  </span>
  <button
    className="button--sort"
    onClick={[Function]}
  >
    <FaArrowDown />
  </button>
  <button
    className="button--sort"
    onClick={[Function]}
  >
    <FaArrowUp />
  </button>
</div>
`;

exports[`renders sort component with title 1`] = `
<div
  className="sort--holder"
>
  <span
    className="sort--title"
  >
    Title
  </span>
  <button
    className="button--sort"
    onClick={[Function]}
  >
    <FaArrowDown />
  </button>
  <button
    className="button--sort"
    onClick={[Function]}
  >
    <FaArrowUp />
  </button>
</div>
`;
